add resonant trim property, add user doc pages